WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40253
[Qt] Crashfix on Path::contains
https://bugs.webkit.org/show_bug.cgi?id=40253
Summary
[Qt] Crashfix on Path::contains
Enrico Ros
Reported
2010-06-07 12:03:48 PDT
Created
attachment 58067
[details]
This fixes a crash on isPointOnPath in PathQt.cpp Fix accessing the first item of an empty vector, that happens when CanvasRenderingContext2D::isPointInPath is invoked over a borderless path (e.g. a path made of just a MoveTo operation).
Attachments
This fixes a crash on isPointOnPath in PathQt.cpp
(1.17 KB, patch)
2010-06-07 12:03 PDT
,
Enrico Ros
ariya.hidayat
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ariya Hidayat
Comment 1
2010-06-07 12:30:33 PDT
Comment on
attachment 58067
[details]
This fixes a crash on isPointOnPath in PathQt.cpp LGTM.
Julien Chaffraix
Comment 2
2010-06-08 16:10:45 PDT
Landed fix in
r60869
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug