[Qt] Crashfix on Path::contains https://bugs.webkit.org/show_bug.cgi?id=40253

Patch by Enrico Ros <eros@codeaurora.org> on 2010-06-08
Reviewed by Ariya Hidayat.

Fix accessing the first item of an empty vector, that happens when
CanvasRenderingContext2D::isPointInPath is invoked over a borderless
path (e.g. a path made of just a MoveTo operation).

* platform/graphics/qt/PathQt.cpp:
(WebCore::isPointOnPathBorder):

Canonical link: https://commits.webkit.org/51884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60869 268f45cc-cd09-0410-ab3c-d52691b4dbfc